added client side dependencies. now I just need to get the application loading javascript!

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,6 +1,7 @@
-!!!
+!!! 5
 html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/bootstrap.css')
+    script(data-main='javascripts/main', type='text/javascript', src='/javascripts/libs/require.js')
   body!= body
