set up basic bootstrap stub in index

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,5 +3,14 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/bootstrap.css')
+    link(rel='stylesheet', href='/stylesheets/bootstrap-responsive.css')
+    link(rel='stylesheet', href='/stylesheets/style.css')
+
+
+    style
+      body {
+
+      }
+
     script(data-main='javascripts/main', type='text/javascript', src='/javascripts/libs/require.js')
   body!= body
