--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,6 +11,6 @@ html
       body {
 
       }
-
+    script(type='text/javascript', src='/socket.io/socket.io.js')
     script(data-main='javascripts/main', type='text/javascript', src='/javascripts/libs/require.js')
   body!= body
