--- a/views/index.jade
+++ b/views/index.jade
@@ -1,26 +1,1 @@
-div.navbar.navbarinverse.navbar-fixed-top
-  div.navbar-inner
-    div.container-fluid
-      a.btn.btn-navbar(data-toggle='collapse', data-target='.nav-collapse')
-        span.icon-bar
-        span.icon-bar
-        span.icon-bar
-      a.brand(href='#')= title
-
-div.container-fluid
-  div.row-fluid
-    div.span3
-      div.well.sidebar-nav
-        ul.nav.nav-list
-          li.nav-header=title
-          li.active
-            a(href='#') link 1
-          li
-            a(href='#') second link
-
-    div.span9
-      div.row-fluid
-        div.span4
-          p here is where the body shall go!!
-          div#chat-console
-            this is where the chat console is going to go
+h1 views#index
