redirects on successful login and register pages  works!! time to start on the actual chat part of the site!

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -36,5 +36,5 @@ html
         div.span9
           div.row-fluid
           div.span4
-            p here is where the body shall go!!
+            p#error
             div#chat-console!= body
